--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.44.4",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.4.5",
     "got": "^14.4.1",
     "jszip": "^3.10.1",
     "koa": "^2.15.3",
@@ -20,6 +22,7 @@
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.1",
     "koa-static": "^5.0.0",
+    "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
